# juliusos

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  QUICKSTART.md  README.md  SHOWCASE_QUICKSTART.md
apps/desktop/: index.html  package.json  pnpm-lock.yaml
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: create_icns.py  create_icons.py  create_proper_icons.py  create_rgba_icons.py  icon.icns
apps/desktop/src/api/: client.ts
apps/desktop/src/components/: FloatingAssistant.tsx
apps/desktop/src/views/: Assistant.tsx  Bible.tsx  Dashboard.tsx  Health.tsx  Plan.tsx  Relationships.tsx  Settings.tsx  Skin.tsx
distro/: README.md  SHOWCASE_OS_DESIGN.md
distro/jufsd/: README.md
distro/juinit/: Cargo.toml  README.md
distro/juinit/examples/: julios-api.toml
distro/juinit/src/: cli.rs  config.rs  daemon.rs  ipc.rs  main.rs  service.rs
distro/juinit/test-services/: test-hello.toml  test-python.toml  test-sleep.toml
distro/jupm/: Cargo.toml  README.md  sqlx-data.json
distro/jupm/src/: database.rs  installer.rs  main.rs  package.rs  repository.rs  resolver.rs
distro/jush/: Cargo.toml  README.md
distro/jush/src/: builtins.rs  executor.rs  main.rs  parser.rs
infra/migrations/: env.py
infra/migrations/versions/: 001_initial_schema.py
infra/seed/: seed_data.py
opt/julios/: STATUS.md
opt/julios/desktop-mode/: index.html  launch.sh
opt/julios/desktop-mode/css/: amiga.css
opt/julios/desktop-mode/js/: api-client.js  desktop.js  window-manager.js
opt/julios/mode-selector/: README.md  mode-selector.py
opt/julios/modern-mode/: launch.sh
opt/julios/terminal-mode/: launch.sh
scripts/: dev.sh  setup.sh
services/agents/: AI_INTEGRATION_GUIDE.md  config.py  desktop_tools.py  main.py  run.py
services/agents/agent_core/: context_builder.py  ollama_client.py
services/agents/core/: context_builder.py
services/agents/prompts/: bible_reflector.txt  daily_digest.txt  schedule_rebalancer.txt
services/agents/recipes/: bible_reflector.py  chat_assistant.py  code_assistant.py  daily_digest.py  macro_coach.py  next_best_step.py  profile_update.py  schedule_rebalancer.py  skin_coach.py  weekly_review.py
services/api/: automations.py  database.py  main.py  models.py  run.py  schemas.py
services/api/routers/: __init__.py  agent.py  automations.py  bible.py  calendar.py  calendar_events.py  contacts.py  emails.py  files.py  finances.py  goals.py  habits.py  health.py  journal.py  meals.py  notes.py  profile.py  projects.py  relationships.py  routines.py  settings.py  skills.py  skin.py  sleep.py  tasks.py  terminal.py  workouts.py
