[package]
name = "juinit"
version = "0.1.0"
edition = "2021"
authors = ["JuliOS Team"]
description = "JuliOS Init System - A lightweight, modern init system"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.27", features = ["process", "signal", "socket"] }
libc = "0.2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "juinit"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
