[package]
name = "jush"
version = "0.1.0"
edition = "2021"
authors = ["JuliOS Team"]
description = "JuliOS Shell - Bash-compatible shell with JuliOS integration"
license = "MIT"

[dependencies]
rustyline = "13.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
nix = { version = "0.27", features = ["process", "signal"] }
libc = "0.2"
glob = "0.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
hostname = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "jush"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
